--- a/public/portfolio.css
+++ b/public/portfolio.css
@@ -4,9 +4,12 @@
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   box-sizing: border-box;
 }
+html{
+  scroll-behavior: smooth;
+}
 body{
   background: #080808;
-  color:#fff;
+  color:rgb(248, 243, 247);
 }
 #header{
   width: 100%;
@@ -147,41 +150,258 @@ margin: 10px o;
   display: block;
 }
 
+/* ----------services------- */
 
-/* .project-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
+#services{
+  padding: 30px 0;
 }
+.service-list{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+  grid-gap:40px;
+  margin-top: 50px;
+}
+.service-list div{
+  background: #541143;
+  font-size: 13px;
+  padding: 40px;
+  font-weight: 300;
+  border-radius: 20px;
+  transition: background 0.s, transform 0.5s;
+}
+.service-list div i{
+  font-size: 50px;
+  margin-bottom: 30px;
+}
+.service-list div h2{
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 15px;
+}
+.service-list div a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 12px;
+  margin-top: 20px;
+  display: inline-block;
+}
+.service-list div:hover{
+background: #f04e81;
+transform: translateY(-10px);
+}
+/* -----------portfolio----------- */
 
-.project-item {
-  background-color: #ffffff;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+#portfolio{
+  padding: 50px 0;
+
+}
+.work-list{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+  grid-gap:40px;
+  margin-top: 50px;
+}
+.work{
+  border-radius: 10px;
+  position:relative ;
   overflow: hidden;
 }
-
-.project-item img {
+.work img{
   width: 100%;
-  height: 200px;
-  object-fit: cover;
+  border-radius: 20px;
+  display: block;
+  transition: transform 0.5s ;
 }
-
-.project-item h3 {
-  font-size: 18px;
-  margin: 10px;
-}
-
-.project-item p {
+.layer{
+  width: 100%;
+  height: 0%;
+  background: linear-gradient(rgba(0,0,0,0.6), #ff004f);
+  border-radius: 20px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
   font-size: 14px;
-  margin: 10px;
+  transition: height 0.5s;
 }
 
-nav a {
-  color: #000000;
+.layer h3{
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.layer a{
+margin-top: 20px;
+color:#ff004f ;
+text-decoration: none;
+font-size: 10px;
+line-height: 60px;
+background: #fff;
+width: 60px;
+height: 60px;
+border-radius: 50%;
+text-align: center;
+}
+.work :hover img{
+transform: scale(1.1);
+}
+.work:hover .layer{
+  height: 100%;
+}
+
+.btn{
+  display: block;
+  margin: 50px auto;
+  width: fit-content;
+  border: 1px solid #ff004f;
+  padding: 14px 50px;
+  border-radius: 10px;
   text-decoration: none;
-  transition: color 0.2s;
+  color: #fff;
+  transition: background 0.5s;
+}
+.btn:hover{
+  background: #ff004f;
+}
+/* ---------contact------ */
+
+.contact-left{
+flex-basis: 35%;
+}
+.contact-right{
+  flex-basis: 60%;
+}
+.contact-left p{
+  margin-top: 50px;
+}
+.contact-left p i{
+  color: #ff004f;
+  margin-left: 15;
+  font-size: 25px;
+
+}
+.social-icons{
+  margin-top: 30px;
+}
+.social-icons a{
+  text-decoration: none;
+  font-size: 30px;
+  margin-right: 15px;
+  color: #f2b9e8;
+  display: inline-block;
+  transition: transform 0.5s;
+}
+.social-icons a:hover{
+  color: #ff004f;
+  transform: translateY(-5px);
+}
+.btn.btn2{
+  display: inline-block;
+  background: #ff004f;
+
+}
+.contact-right form{
+  width: 100%;
+}
+form input, form textarea{
+  width: 100%;
+  border: 0;
+  outline: none;
+  background: #262626;
+  padding: 15px;
+  margin: 15px 0;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 10px;
+}
+form .btn2{
+  padding: 14px 60px;
+  font-size: 18px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+.copyright{
+  width: 100%;
+  text-align: center;
+  padding: 25px 0;
+  background: #262626;
+  font-weight: 300;
+  margin-top: 20px;
+}
+.copyright i{
+  color: #ff004f;
+}
+/* --------css for small screen----- */
+nav .fas{
+  display: none;
 }
 
-nav a:hover {
-  color: #007bff;
-} */
+@media only screen and (max-width:600px){
+  .header-text{
+    margin-top: 100%;
+    font-size: 16px;
+  }
+  .header-text h1{
+    font-size: 30px;
+  }
+  nav .fas{
+    display: block;
+    font-size: 25px;
+  }
+  nav ul{
+    background: #ff004f;
+    position: fixed;
+    top: 0;
+    right: -200px;
+    width: 200px;
+    height: 100vh;
+    padding-top: 50px;
+    z-index: 2;
+    transition: right 0.5s;
+  }
+  nav ul li{
+    display: block;
+    margin: 25px;
+  }
+  nav ul .fas{
+    position:absolute;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+  }
+  .sub-title{
+    font-size: 40px;
+
+  }
+  .about-col-1, .about-col-2{
+    flex-basis: 100%;
+  }
+  .about-col-1{
+    margin-bottom: 30px;
+  }
+  .about-col-2{
+    font-size: 14px;
+  }
+  .tab-links{
+    font-size: 16px;
+    margin-right: 20px; ;
+  }
+  .contact-left, .contact-right{
+    flex-basis: 100%;
+  }
+  .copyright{
+    font-size: 14px;
+  }
+
+
+}
+#msg{
+  color: #3feaf7;
+  margin-top: -40px;
+  display: block;
+}
