--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 #header{
   width: 100%;
   height: 100vh;
-  background-image: url(images/profilepic.jpg);
+  background-image: url(profilepic.jpg);
   background-size: cover;
   background-position:center ;
 }
